Update GitHub Actions to trigger on develop branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,24 @@ name: Build and Test Arduino Client
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
-      - main
+      - develop
 
+
+
+
+
+
+
+
+
+
+
+
+
+      
 jobs:
   build:
     runs-on: windows-latest
