--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,18 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3 
+      uses: actions/checkout@v2
 
     - name: Set up .NET SDK
-      uses: actions/setup-dotnet@v3 
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '8.0'
 
+    - name: Navigate to project directory
+      run: cd ArduinoClient
+
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ArduinoClient.csproj
 
     - name: Build project
       run: dotnet build --configuration Release
@@ -34,13 +37,13 @@ jobs:
       run: dotnet publish --configuration Release --output ./publish
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
         name: binaries
         path: ./publish
 
     - name: Upload test reports
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
         name: test-reports
         path: ./TestResults/*.trx
