Developed Server and Client

--- a/ArduinoClient/ArduinoClient/ArduinoClient.csproj
+++ b/ArduinoClient/ArduinoClient/ArduinoClient.csproj
@@ -9,7 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Fonts\Minecraft.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Fonts\Minecraft.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
