--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Install arduino-cli
       run: |
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-        echo "PATH=${GITHUB_WORKSPACE}/bin:$PATH" >> $GITHUB_ENV
+        echo "Adding arduino-cli to PATH"
+        echo "${GITHUB_WORKSPACE}/bin" >> $GITHUB_ENV
 
     # 4. Налаштування Arduino CLI
     - name: Configure Arduino CLI
@@ -40,26 +41,26 @@ jobs:
     # 5. Компіляція прошивки
     - name: Compile Arduino Sketch
       run: |
-        arduino-cli compile --fqbn arduino:avr:uno ${GITHUB_WORKSPACE}/RockPaperScissors/ServerCommunication
+        arduino-cli compile --fqbn arduino:avr:uno C:/Navchannya/4.1/АПКС/RockPaperScissors/ServerCommunication
 
     # 6. Тестування C# проекту
     - name: Restore dependencies
-      run: dotnet restore ${GITHUB_WORKSPACE}/ArduinoClient/ArduinoClient.sln
+      run: dotnet restore ArduinoClient/ArduinoClient.sln
 
     - name: Build project
-      run: dotnet build ${GITHUB_WORKSPACE}/ArduinoClient/ArduinoClient.sln --configuration Release
+      run: dotnet build ArduinoClient/ArduinoClient.sln --configuration Release
 
     - name: Run tests
-      run: dotnet test ${GITHUB_WORKSPACE}/ArduinoClient/ArduinoClient.sln --configuration Release --logger "trx"
+      run: dotnet test ArduinoClient/ArduinoClient.sln --configuration Release --logger "trx"
 
     # 7. Завантаження прошивки (опціонально)
     - name: Upload Firmware to Arduino
       run: |
-        arduino-cli upload --fqbn arduino:avr:uno --port COM5 ${GITHUB_WORKSPACE}/RockPaperScissors/ServerCommunication
+        arduino-cli upload --fqbn arduino:avr:uno --port COM5 C:/Navchannya/4.1/АПКС/RockPaperScissors/ServerCommunication
 
     # 8. Публікація артефактів
     - name: Publish build
-      run: dotnet publish ${GITHUB_WORKSPACE}/ArduinoClient/ArduinoClient.sln --configuration Release --output ./publish
+      run: dotnet publish ArduinoClient/ArduinoClient.sln --configuration Release --output ./publish
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
