--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
       run: |
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
         echo "Adding arduino-cli to PATH"
-        echo "${GITHUB_WORKSPACE}/bin" >> $GITHUB_ENV
+        echo "${HOME}/bin" >> $GITHUB_ENV
+        echo "PATH=$PATH:${HOME}/bin" >> $GITHUB_ENV
 
     # 4. Налаштування Arduino CLI
     - name: Configure Arduino CLI
