--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,28 @@ jobs:
     # 3. Встановлення arduino-cli вручну для Windows
     - name: Install arduino-cli
       run: |
+        # Завантажуємо архів з Arduino CLI
         Invoke-WebRequest -Uri https://downloads.arduino.cc/arduino-cli/arduino-cli_latest_Windows_64bit.zip -OutFile arduino-cli.zip
+        
+        # Розпаковуємо архів в директорію
         Expand-Archive arduino-cli.zip -DestinationPath C:\arduino-cli
+        
+        # Додаємо шлях до Arduino CLI в PATH
         $env:Path = "$env:Path;C:\arduino-cli"
+        
+        # Оновлюємо змінну середовища для подальших кроків
         echo "PATH=$env:Path" >> $GITHUB_ENV
 
     # 4. Налаштування Arduino CLI
     - name: Configure Arduino CLI
       run: |
+        # Перевіряємо, чи Arduino CLI доступний
+        arduino-cli version
+
+        # Оновлюємо індекс ядер
         arduino-cli core update-index
+
+        # Встановлюємо платформу для Arduino
         arduino-cli core install arduino:avr
 
     # 5. Компіляція прошивки
