--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,18 +19,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # 2. Завантаження та встановлення Arduino IDE
-    - name: Install Arduino IDE
+    # 2. Завантаження Arduino IDE
+    - name: Download Arduino IDE
       run: |
         curl -fsSL https://downloads.arduino.cc/arduino-ide/arduino-ide_latest_Windows_64bit.zip -o arduino-ide.zip
-        tar -xf arduino-ide.zip -C $env:USERPROFILE
-        echo "$env:USERPROFILE/arduino-ide.exe" >> $GITHUB_PATH
+        tar -xf arduino-ide.zip -C $env:USERPROFILE\arduino-ide
+        echo "$env:USERPROFILE\arduino-ide\arduino-ide.exe" >> $GITHUB_PATH
 
     # 3. Компіляція та завантаження скетчу
     - name: Compile and upload sketch
       run: |
-        arduino-ide.exe --verify ./ServerCommunication/ServerCommunication.ino
-        arduino-ide.exe --upload --port COM5 ./ServerCommunication/ServerCommunication.ino
+        $env:Path += ";$env:USERPROFILE\arduino-ide"
+        $idePath = "$env:USERPROFILE\arduino-ide\arduino-ide.exe"
+        & $idePath --verify ./ServerCommunication/ServerCommunication.ino
+        & $idePath --upload --port COM5 ./ServerCommunication/ServerCommunication.ino
 
     # 4. Тестування C# проекту
     - name: Restore dependencies
