--- a/ArduinoClient/ArduinoClient/ArduinoClient.csproj
+++ b/ArduinoClient/ArduinoClient/ArduinoClient.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="System.IO.Ports" Version="9.0.0" />
   </ItemGroup>
 
